--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,7 +36,8 @@
 
       const data = await res.json();
       if(data.status === "ok"){
-        window.location.href = "/inicio";
+        // 🟢 NOVO: O Flask Session gerencia o estado. Apenas redirecionamos.
+        window.location.href = "/inicio"; 
       } else {
         alert(data.mensagem);
       }
